--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -24,8 +24,7 @@
     <div class="row">
         <div class="col text-center mt-3">
             <hr>
-            <h2 class="logo-font mt-5 mb-5 center"><i>Profile</i></h2>
-            {{profile}}
+            <h2 class="logo-font mt-5 mb-5 center"><i>My Contact Details</i></h2>
         </div>
     </div>
 </div>
@@ -77,4 +76,11 @@
     </div>
   </div>
 </div>
+{% endblock %}
+
+{% block postloadjs %}
+  {{ block.super }}
+  <script type="text/javascript" src="{% static 'profiles/js/countryfield.js' %}">
+    
+  </script>
 {% endblock %}
