--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -223,7 +223,7 @@
     <div class="row">
       <div class="col-12 center">
         {% if from_profile %}
-        <a href="" class="btn">Back to Profile</a>
+        <a href="{% url 'profile' %}" class="btn">Back to Profile</a>
         {% else %}
         <a href="{% url 'products' %}" class="btn btn-links mt-5 mb-5">Back to store!</a>
         {% endif %}
