--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -20,7 +20,7 @@
 {% endblock %}
 
 {% block content %}
-<div class="container">
+<div class="container profile-container">
     <div class="row">
         <div class="col text-center mt-3">
             <hr>
@@ -39,7 +39,7 @@
   </div>
   <div class="col-12 col-lg-6">
     <p class="text-muted"><i>Order History</i></p>
-    <div class="history table-responsive">
+    <div class="order-history table-responsive">
       <table class="table table-sm table-borderless">
           <thead>
               <tr>
@@ -81,6 +81,5 @@
 {% block postloadjs %}
   {{ block.super }}
   <script type="text/javascript" src="{% static 'profiles/js/countryfield.js' %}">
-    
   </script>
 {% endblock %}
