--- a/products/templates/products/add_product.html
+++ b/products/templates/products/add_product.html
@@ -27,11 +27,12 @@
 
     <div class="row">
         <div class="col-12 col-md-6">
-            <form method="POST" action="" class="form mb-2" enctype="multipart/form-data">
-                
+            <form method="POST" action="{% url 'add_product' %}" class="form mb-2" enctype="multipart/form-data">
+                {% csrf_token %}
+                {{ form | crispy }}
                <div class="text-right">
                    <a class="btn" href="{% url 'products' %}">Cancel Upload</a>
-                   <button type="submit" >Upload</button>
+                   <button type="submit" class="btn btn-links">Upload</button>
                </div>
             </form>
         </div>
