--- a/templates/base.html
+++ b/templates/base.html
@@ -75,7 +75,7 @@
               <div class="dropdown-menu border-0" aria-labelledby="user-options">
                 {% if request.user.is_authenticated %}
                 {% if request.user.is_superuser %}
-                  <a href="" class="dropdown-item dark-color">Product Management</a>
+                  <a href="{% url 'add_product' %}" class="dropdown-item dark-color">Product Management</a>
                 {% endif %}
                   <a href="{% url 'profile' %}" class="dropdown-item dark-color">My Profile</a>
                   <a href="{% url 'account_logout' %}" class="dropdown-item dark-color">Logout</a>
