--- a/static/css/base.css
+++ b/static/css/base.css
@@ -520,6 +520,34 @@ body {
     margin-top: 250px !important;
 }
 
+/* -------------------------------- Product admin form */
+
+.btn-file {
+    position: relative;
+    overflow: hidden;
+}
+
+.btn-file input[type="file"] {
+    position: absolute;
+    top: 0;
+    right: 0;
+    min-width: 100%;
+    min-height: 100%;
+    opacity: 0;
+    cursor: pointer;
+}
+
+.custom-checkbox .custom-control-label::before {
+    border-radius: 0;
+    border-color: #e71d36;
+}
+
+.custom-checkbox .custom-control-input:checked~.custom-control-label::before {
+    background-color: #e71d36;
+    border-color: #e71d36;
+    border-radius: 0;
+}
+
 /* -------------------------------- Media Queries */
 
 @media (max-width: 320px) {
