--- a/blog/templates/blog/upload_blog.html
+++ b/blog/templates/blog/upload_blog.html
@@ -22,6 +22,20 @@
 <div>
     <h2 class="logo-font mt-5 mb-5 center blog-logo"><i>Upload Blog</i></h2>
 </div>
+<div class="form-container">
+    <div class="row">
+      <div class="col-12">
+        <form method="POST" action="{% url 'upload_blog' %}" enctype="multipart/form-data">
+        {% csrf_token %}
+        {{ form | crispy }}
+        <div class="text-right">
+          <a class="btn btn-links" href="{% url 'home' %}">Cancel Upload</a>
+          <button type="submit" class="btn btn-links">Upload Blog</button>
+        </div>
+        </form>
+      </div>
+    </div>
+</div>
 
 
 {% endblock %}
