--- a/templates/base.html
+++ b/templates/base.html
@@ -146,6 +146,9 @@
         <div class="row">
           <div class="col-12 ">
             <a href="{% url 'blog_post_page' %}" class="dark-blue blog-link">Blog</a>
+            {% if request.user.is_superuser %}
+            <a href="{% url 'upload_blog' %}" class="dark-blue blog-link"> | Upload Blog</a>
+            {% endif %}
           </div>
           <div class="col-12 social p-2">
             <a href="https://www.facebook.com" target="_blank"><i class="fa fa-facebook-square mr-1"
