--- a/blog/templates/blog/blog.html
+++ b/blog/templates/blog/blog.html
@@ -53,13 +53,7 @@
         <div class="col-4"></div>
         <div class="col-8 head-container">
             <p class="blog-description "><strong><i>{{ blog.blog_heading }}</i></strong></p>
-            <a href="">See full Post</a>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-4"></div>
-        <div class="col-8">
-            <p>{{ blog.blog_main }}</p>
+            <a href="{% url 'full_post' blog.id %}" class="btn btn-links">See full Post</a>
         </div>
     </div>
   </div>
